# general-llm

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/endpoints/: infuse.py
app/services/: openai_service.py
